...

  const CreateCourseModal({
    super.key,
    this.onCancel,
    this.onCreate,
    this.nameController,
    this.nameHintText = 'Programación Móvil',
    this.title = 'Crear Curso',
    this.nameLabel = 'Nombre (*)',
    this.categoryLabel = 'Categoria de Grupo (opc)',
    this.importCsvText = 'Importar CSV',
    this.cancelText = 'Cancelar',
    this.createText = 'Crear',
...
              border: Border.all(
                color: isLight ? AppTheme.grayColor100 : AppTheme.darkBorder,
                width: 1,
              ),
            ),
            child: TextField(
              key: const Key('course_name_input'),
              controller: widget.nameController,
              maxLines: 1,
              decoration: InputDecoration(
                border: OutlineInputBorder(
                  borderRadius: BorderRadius.circular(10),
                  borderSide: BorderSide.none,
...
              ),
              const SizedBox(width: 10),
              Expanded(
                child: SizedBox(
                  height: 40,
                  child: ElevatedButton(
                    key: const Key('submit_course_button'),
                    onPressed: widget.onCreate,
                    style: ElevatedButton.styleFrom(
                      backgroundColor: AppTheme.primaryColor,
                      elevation: 0,
                      shape: RoundedRectangleBorder(
                        borderRadius: BorderRadius.circular(12),
...
