...
      ),
      child: SingleChildScrollView(
        child: Column(
          mainAxisSize: MainAxisSize.min,
          children: [
            Text(
              'Crear Actividad',
              style: AppTheme.bodyL.copyWith(
                fontSize: 16,
                fontWeight: FontWeight.w800,
                color: isLight ? AppTheme.textColor : AppTheme.darkTextPrimary,
              ),
            ),
            const SizedBox(height: 14),

            _ModalLabel(text: 'Nombre (*)'),
            const SizedBox(height: 8),
            _TextInputField(
              key: const Key('activity_name_input'),
              controller: nameController,
              hintText: 'Taller 1',
            ),
            const SizedBox(height: 12),
            _ModalLabel(text: 'Fecha Inicio'),
            const SizedBox(height: 6),
...
                ),
                const SizedBox(width: 10),
                Expanded(
                  child: SizedBox(
                    height: 40,
                    child: ElevatedButton(
                      key: const Key('submit_activity_button'),
                      onPressed: onCreate,
                      style: ElevatedButton.styleFrom(
                        backgroundColor: AppTheme.primaryColor,
                        elevation: 0,
                        shape: RoundedRectangleBorder(
                          borderRadius: BorderRadius.circular(12),
...
